--- a/docroot/wp-content/themes/glazov/assets/css/styles.css
+++ b/docroot/wp-content/themes/glazov/assets/css/styles.css
@@ -6909,3 +6909,6 @@ span.wpcf7-not-valid-tip {
 .mean-container .glzv-toggle {
   display: none;
 }
+.lg-toolbar .lg-download.lg-icon {
+  display: none;
+}
